---
source: crates/compiler/semantic/tests/common/mod.rs
expression: snapshot
---
--- Input 1 (ERROR) ---
fn test() { let outer = 1; { let middle = 2; { let inner = 3; } let bad = inner; } return; }
--- Diagnostics ---
[1001] Error: Undeclared variable 'inner'
   ╭─[ semantic_tests::scoping::nested_scopes::test_nested_scopes_and_visibility:1:75 ]
   │
 1 │ fn test() { let outer = 1; { let middle = 2; { let inner = 3; } let bad = inner; } return; }
   │                                                                           ──┬──  
   │                                                                             ╰──── Undeclared variable 'inner'
───╯

============================================================

--- Input 2 (ERROR) ---
fn test() { let a = 1; { let b = a + 1; { let c = b + 1; } let bad1 = c; } let bad2 = b; return; }
--- Diagnostics ---
[1001] Error: Undeclared variable 'c'
   ╭─[ semantic_tests::scoping::nested_scopes::test_nested_scopes_and_visibility:1:71 ]
   │
 1 │ fn test() { let a = 1; { let b = a + 1; { let c = b + 1; } let bad1 = c; } let bad2 = b; return; }
   │                                                                       ┬  
   │                                                                       ╰── Undeclared variable 'c'
───╯
[1001] Error: Undeclared variable 'b'
   ╭─[ semantic_tests::scoping::nested_scopes::test_nested_scopes_and_visibility:1:87 ]
   │
 1 │ fn test() { let a = 1; { let b = a + 1; { let c = b + 1; } let bad1 = c; } let bad2 = b; return; }
   │                                                                                       ┬  
   │                                                                                       ╰── Undeclared variable 'b'
───╯

============================================================

--- Input 3 (ERROR) ---
fn test() { let x = 1; { let y = 2; x = y + 1; } y = 3; return; }
--- Diagnostics ---
[1001] Error: Undeclared variable 'y'
   ╭─[ semantic_tests::scoping::nested_scopes::test_nested_scopes_and_visibility:1:50 ]
   │
 1 │ fn test() { let x = 1; { let y = 2; x = y + 1; } y = 3; return; }
   │                                                  ┬  
   │                                                  ╰── Undeclared variable 'y'
───╯

============================================================

--- Input 4 (ERROR) ---
fn test() { { let first = 1; } { let second = first; } return; }
--- Diagnostics ---
[1001] Error: Undeclared variable 'first'
   ╭─[ semantic_tests::scoping::nested_scopes::test_nested_scopes_and_visibility:1:47 ]
   │
 1 │ fn test() { { let first = 1; } { let second = first; } return; }
   │                                               ──┬──  
   │                                                 ╰──── Undeclared variable 'first'
───╯

============================================================

--- Input 5 (ERROR) ---
fn test() { if (true) { let if_var = 42; } let bad = if_var; return; }
--- Diagnostics ---
[1001] Error: Undeclared variable 'if_var'
   ╭─[ semantic_tests::scoping::nested_scopes::test_nested_scopes_and_visibility:1:54 ]
   │
 1 │ fn test() { if (true) { let if_var = 42; } let bad = if_var; return; }
   │                                                      ───┬──  
   │                                                         ╰──── Undeclared variable 'if_var'
───╯
